--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "npm": "2.14.x"
   },
   "scripts": {
-    "start": "node node_modules/grunt-cli/bin/grunt",
+    "start": "node node_modules/grunt-cli/bin/grunt"
   },
   "dependencies": {
     "async": "latest",
